# stm32-f446re-adc-uart-data-transfer

./: .gitignore  CMakeLists.txt  Makefile  README.md  STM-F446RE-ADC_UART_DataTransfer.ioc  STM-F446RE-ADC_UART_DataTransfer.launch
Core/Src/: main.c  stm32f4xx_hal_msp.c
